tests/NormalTests/paczka1/small_fuzzy/17848385.err
Error in line 1: XWYWb5 A43 39,5
Error in line 4: nZKkrRk0 A578 35,3
Error in line 10: pUOL A578 54,3
Error in line 3: pSMaC8fs A66 81,1
Error in line 12: y1QiP434Dw A66 87,5
